[package]
name = "libcipher"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "A Rust implementation of the Advanced Encryption Standard (AES) for secure data encryption and decryption."

[dependencies]
aes = "0.8.4"
cbc =  { version = "0.1.2", features = ["alloc"] }
ecb = "0.1.2"
block-padding = "0.3.3"